--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,7 +21,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "autoprefixer": "^10.2.1",
+    "framer-motion": "^3.2.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -30,6 +32,7 @@
     "redux": "^4.0.5",
     "redux-loop": "^6.0.1",
     "tailwindcss": "^2.0.2",
+    "url-parse": "^1.4.7",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
