Landing page in mobile and much more

--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -1,4 +1,5 @@
 {
-  "name": "Justnotecc",
-  "displayName": "Justnotecc"
+  "name": "Justnote",
+  "displayName": "Justnote",
+  "projectName": "Justnotecc",
 }
