--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-svg": "^12.1.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
