--- a/packages/mobile/android/gradle.properties
+++ b/packages/mobile/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+JUSTNOTE_UPLOAD_STORE_FILE=justnote-android-upload-key.keystore
+JUSTNOTE_UPLOAD_KEY_ALIAS=justnote-android-upload-key
+JUSTNOTE_UPLOAD_STORE_PASSWORD=<keystore-password>
+JUSTNOTE_UPLOAD_KEY_PASSWORD=<keystore-alias-password>
