--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,9 +14,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@stacks/auth": "^1.0.1",
     "@stacks/connect": "^4.3.15",
-    "@stacks/storage": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
@@ -26,6 +24,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "autoprefixer": "^10.2.1",
+    "blockstack": "^21.1.1",
     "framer-motion": "^3.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
@@ -71,7 +70,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "blockstack": "^21.1.1"
-  }
+  "devDependencies": {}
 }
