--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,6 +25,7 @@
     "@welldone-software/why-did-you-render": "^6.0.5",
     "autoprefixer": "^10.2.1",
     "blockstack": "^21.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^3.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
