--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -188,20 +188,15 @@ android {
     }
 
     packagingOptions {
-        exclude 'META-INF/kotlinx-io.kotlin_module'
-        exclude 'META-INF/kbignumbers.kotlin_module'
-        exclude 'META-INF/ripemd160.kotlin_module'
-        exclude 'META-INF/atomicfu.kotlin_module'
-        exclude 'META-INF/extensions.kotlin_module'
-        exclude 'META-INF/core.kotlin_module'
-        exclude 'META-INF/keccak.kotlin_module'
-        exclude 'META-INF/sha256.kotlin_module'
-        exclude 'META-INF/khash-extensions.kotlin_module'
-        pickFirst '**/*.so'
+        pickFirst 'META-INF/core.kotlin_module'
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
     }
 
     dexOptions {
-       javaMaxHeapSize "3g"
+        javaMaxHeapSize "3g"
     }
 }
 
