--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,10 +17,10 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-blockstack": "https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?6d3814e88711af1394d0148586c871cff7038f6e",
+    "react-native-blockstack": "https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?e333bd3216453a78428c76b09d5d5e7450681a64",
     "react-native-fast-image": "^8.3.4",
     "react-native-keyboard-manager": "^4.0.13-17",
-    "react-native-mmkv-storage": "^0.5.3",
+    "react-native-mmkv-storage": "0.4.4",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-svg": "^12.1.0",
     "react-redux": "^7.2.2",
