--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply from: '../../node_modules/react-native-unimodules/gradle.groovy'
 
 import com.android.build.OutputFile
 
@@ -207,6 +208,8 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    addUnimodulesDependencies()
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
@@ -227,6 +230,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation project(":react-native-bridge")
+    implementation project(":react-native-aztec")
+    implementation "com.github.wordpress-mobile:react-native-gesture-handler:b80e959908b383a26d6e35d992d6d529efad0b16"
 }
 
 // Run this once to be able to run the application with BUCK
