--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -233,7 +233,7 @@ dependencies {
 
     implementation project(":react-native-bridge")
     implementation project(":react-native-aztec")
-    implementation "com.github.wordpress-mobile:react-native-gesture-handler:b80e959908b383a26d6e35d992d6d529efad0b16"
+    implementation project(":react-native-gesture-handler")
 }
 
 // Run this once to be able to run the application with BUCK
