--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -14,66 +14,34 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/masked-view": "git+https://github.com/wordpress-mobile/react-native-masked-view.git#f65a51a3320e58404d7f38d967bfd1f42b439ca9",
-    "@react-native-community/slider": "git+https://github.com/justnotecc/react-native-slider.git#84463628348f412d95751e17c80fe3c410f41e93",
-    "@react-navigation/core": "5.12.0",
-    "@react-navigation/native": "5.7.0",
-    "@react-navigation/routers": "5.4.9",
-    "@react-navigation/stack": "5.6.2",
-    "@wordpress/base-styles": "../../../gutenberg/packages/base-styles",
-    "@wordpress/edit-post": "../../../gutenberg/packages/edit-post",
-    "@wordpress/format-library": "../../../gutenberg/packages/format-library",
-    "@wordpress/react-native-bridge": "../../../gutenberg/packages/react-native-bridge",
-    "core-js": "3.8.3",
-    "jsdom-jscore-rn": "git+https://github.com/iamcco/jsdom-jscore-rn.git#a562f3d57c27c13e5bfc8cf82d496e69a3ba2800",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-blockstack": "https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?e333bd3216453a78428c76b09d5d5e7450681a64",
     "react-native-fast-image": "^8.3.4",
-    "react-native-gesture-handler": "git+https://github.com/wordpress-mobile/react-native-gesture-handler.git#b80e959908b383a26d6e35d992d6d529efad0b16",
-    "react-native-get-random-values": "git+https://github.com/wordpress-mobile/react-native-get-random-values.git#f03f2c16414aff4ea76064dcd00a9e3c6efc838d",
-    "react-native-hr": "git+https://github.com/Riglerr/react-native-hr.git#2d01a5cf77212d100e8b99e0310cce5234f977b3",
-    "react-native-hsv-color-picker": "git+https://github.com/wordpress-mobile/react-native-hsv-color-picker",
-    "react-native-keyboard-aware-scroll-view": "git+https://github.com/wordpress-mobile/react-native-keyboard-aware-scroll-view.git#ef97e80a89041e3b8563e7d4dca00f2222180ff4",
     "react-native-keyboard-manager": "^4.0.13-17",
-    "react-native-linear-gradient": "git+https://github.com/wordpress-mobile/react-native-linear-gradient.git#52bf43077171cff8714ce3e0155f3ebb7f55bc37",
     "react-native-mmkv-storage": "0.4.4",
-    "react-native-modal": "6.5.0",
-    "react-native-reanimated": "git+https://github.com/wordpress-mobile/react-native-reanimated.git#ed48f510fba751cd75da7629e92276166766be91",
-    "react-native-safe-area": "^0.5.1",
-    "react-native-safe-area-context": "git+https://github.com/wordpress-mobile/react-native-safe-area-context.git#1e3c0d34f31b59fb79f71ec0b4c39c513f684871",
-    "react-native-screens": "git+https://github.com/wordpress-mobile/react-native-screens.git#b3d907bda2695743f35fd874261dcd27e0912eca",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-svg": "^12.1.0",
-    "react-native-unimodules": "^0.12.0",
-    "react-native-url-polyfill": "1.1.2",
-    "react-native-video": "git+https://github.com/wordpress-mobile/react-native-video.git#9bcb723e5755678a69fcb7d0a17145e50a475e9f",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-loop": "^6.0.1",
     "reselect": "^4.0.0",
     "tailwind-rn": "https://github.com/bracedotto/tailwind-rn#eb66f05f229c8525d913130808eddc2ebffbd692",
-    "url-parse": "^1.4.7",
-    "util": "^0.12.3"
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/runtime": "^7.8.4",
+    "@babel/core": "^7.13.15",
+    "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^1.1.0",
     "@welldone-software/why-did-you-render": "^6.0.5",
-    "@wordpress/babel-plugin-import-jsx-pragma": "^3.0.1",
     "babel-jest": "^25.1.0",
     "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-native-sass-transformer": "^1.4.0",
     "react-test-renderer": "16.13.1",
-    "sass": "^1.32.8",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "jest": {
     "preset": "react-native"
