Fix escaping note body in NoteEditorEditor.js

--- a/packages/mobile/ios/Justnotecc/Info.plist
+++ b/packages/mobile/ios/Justnotecc/Info.plist
@@ -88,5 +88,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Take a picture for use in your note.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Select a picture for use in your note.</string>
 </dict>
 </plist>
