--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "file:../../../ckeditor5/packages/ckeditor5-build-classic",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@stacks/connect": "^4.3.15",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
