--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -6,7 +6,7 @@ platform :ios, '11.0'
 target 'Justnotecc' do
 
   pod 'PromisesObjC', :modular_headers => true
-  pod 'Blockstack', :git => 'https://github.com/bracedotto/blockstack-ios.git', :commit => 'aa22663'
+  pod 'Blockstack', :git => 'https://github.com/bracedotto/blockstack-ios.git', :commit => 'a1ec115'
 
   config = use_native_modules!
 
@@ -24,6 +24,11 @@ target 'Justnotecc' do
   use_flipper!
   post_install do |installer|
     flipper_post_install(installer)
+
+    ## Fix for Flipper-Folly on iOS 14.5
+    #find_and_replace("Pods/Flipper-Folly/folly/synchronization/DistributedMutex-inl.h", "atomic_notify_one(state)", "folly::atomic_notify_one(state)")
+
+    #find_and_replace("Pods/Flipper-Folly/folly/synchronization/DistributedMutex-inl.h", "atomic_wait_until(&state, previous | data, deadline)", "folly::atomic_wait_until(&state, previous | data, deadline)")
   end
 end
 
@@ -34,4 +39,17 @@ target 'Justnotecc-tvOS' do
     inherit! :search_paths
     # Pods for testing
   end
+end
+
+def find_and_replace(dir, findstr, replacestr)
+  Dir[dir].each do |name|
+      text = File.read(name)
+      replace = text.gsub(findstr,replacestr)
+      if text != replace
+          puts "Fix: " + name
+          File.open(name, "w") { |file| file.puts replace }
+          STDOUT.flush
+      end
+  end
+  Dir[dir + '*/'].each(&method(:find_and_replace))
 end
