--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.3",
   "private": true,
   "scripts": {
-    "start-js": "HTTPS=true BROWSER=none react-scripts start",
-    "start": "react-scripts start",
+    "start": "HTTPS=true BROWSER=none react-scripts start",
     "build-css-dev": "postcss tailwind.css -o src/stylesheets/tailwind.css",
     "build-css": "postcss tailwind.css -o src/stylesheets/tailwind.css --env production",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "yarn run build-css && yarn run build-js",
     "test": "react-scripts test",
     "deploy-test": "aws s3 sync build/static s3://test-justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://test-justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://test-justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://test-justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://test-justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E16T92AA3CQF3P --paths /index.html /.well-known/* --profile justnote",
     "deploy-prod": "aws s3 sync build/static s3://justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E1G6UHDXNDOUN --paths /index.html /.well-known/* --profile justnote",
@@ -30,7 +29,6 @@
     "blockstack": "^21.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^3.2.1",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.2.4",
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
