Save an image as a file, not a string in web

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,6 +24,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/file-saver": "^2.0.3",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.18",
+    "@types/url-parse": "^1.4.4",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "autoprefixer": "^10.2.1",
     "blockstack": "^21.1.1",
