--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,37 +15,37 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-decoupled-document": "file:../../../ckeditor5/packages/ckeditor5-build-decoupled-document",
-    "@ckeditor/ckeditor5-react": "^3.0.2",
-    "@stacks/connect": "^4.3.15",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/typography": "^0.3.1",
+    "@ckeditor/ckeditor5-react": "^3.0.3",
+    "@stacks/connect": "4.3.15",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
+    "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/line-clamp": "^0.2.2",
+    "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/file-saver": "^2.0.3",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@types/url-parse": "^1.4.4",
-    "@welldone-software/why-did-you-render": "^6.0.5",
-    "autoprefixer": "^10.2.1",
+    "@welldone-software/why-did-you-render": "^6.2.1",
+    "autoprefixer": "^10.4.0",
     "blockstack": "^21.1.1",
     "file-saver": "^2.0.5",
-    "framer-motion": "^3.2.1",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-scripts": "4.0.1",
-    "redux": "^4.0.5",
-    "redux-loop": "^6.0.1",
-    "reselect": "^4.0.0",
-    "tailwindcss": "^2.0.2",
+    "framer-motion": "4.1.17",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-loop": "^6.1.0",
+    "reselect": "^4.1.1",
+    "tailwindcss": "^2.2.19",
     "url-parse": "^1.5.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
@@ -78,6 +78,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
