--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -15,37 +15,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "core-js": "^3.15.2",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.2",
+    "react-native": "0.66.1",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-blockstack": "https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?cad4d6b85620850ac6cc505e07bffd2fee779aca",
-    "react-native-fast-image": "^8.3.4",
-    "react-native-file-access": "1.7.1",
-    "react-native-keyboard-manager": "^4.0.13-17",
+    "react-native-blockstack": "https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?f928cd0381ac81b13b2c51fee1abf510ff8e8e95",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-file-access": "^2.0.0",
+    "react-native-keyboard-manager": "^6.5.4-3",
     "react-native-mmkv-storage": "0.4.4",
-    "react-native-safe-area-context": "^3.2.0",
-    "react-native-svg": "^12.1.0",
-    "react-native-webview": "^11.6.5",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-loop": "^6.0.1",
-    "reselect": "^4.0.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-webview": "^11.14.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-loop": "^6.1.0",
+    "reselect": "^4.1.2",
     "tailwind-rn": "https://github.com/bracedotto/tailwind-rn#6047a3e3de6607a6cb5b738ab3392d80aa81fd13",
     "url-parse": "^1.5.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/runtime": "^7.13.10",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "@welldone-software/why-did-you-render": "^6.0.5",
-    "babel-jest": "^25.1.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.1",
+    "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1",
-    "typescript": "^4.2.4"
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2",
+    "typescript": "^4.4.4"
   },
   "jest": {
     "preset": "react-native"
