--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,12 +3,13 @@
   "version": "0.6.0",
   "private": true,
   "scripts": {
+    "patch-js": "node bin/patch.js",
     "start": "HTTPS=true BROWSER=none react-scripts start",
     "build-css-dev": "postcss tailwind.css -o src/stylesheets/tailwind.css",
-    "patch-js": "node bin/patch.js",
     "build-css": "postcss tailwind.css -o src/stylesheets/tailwind.css --env production",
     "build-js": "react-scripts build",
-    "build": "yarn run patch-js && yarn run build-css && yarn run build-js",
+    "copy-hard-coding": "bash bin/copy-hard-coding.sh",
+    "build": "yarn run patch-js && yarn run build-css && yarn run build-js && yarn run copy-hard-coding",
     "test": "react-scripts test",
     "deploy-test": "aws s3 sync build/static s3://test-justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://test-justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://test-justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://test-justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://test-justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E16T92AA3CQF3P --paths /index.html /.well-known/* --profile justnote",
     "deploy-prod": "aws s3 sync build/static s3://justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E1G6UHDXNDOUN --paths /index.html /.well-known/* --profile justnote",
