Upgrade web to CRA 5 and Tailwind 3

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "scripts": {
     "patch-js": "node bin/patch.js",
-    "start": "HTTPS=true BROWSER=none react-scripts start",
-    "build-css-dev": "postcss tailwind.css -o src/stylesheets/tailwind.css",
-    "build-css": "postcss tailwind.css -o src/stylesheets/tailwind.css --env production",
-    "build-js": "react-scripts build",
+    "start": "HTTPS=true BROWSER=none react-app-rewired start",
+    "build-js": "react-app-rewired build",
     "copy-hard-coding": "bash bin/copy-hard-coding.sh",
-    "build": "yarn run patch-js && yarn run build-css && yarn run build-js && yarn run copy-hard-coding",
-    "test": "react-scripts test",
+    "build": "yarn run patch-js && yarn run build-js && yarn run copy-hard-coding",
+    "test": "react-app-rewired test",
     "deploy-test": "aws s3 sync build/static s3://test-justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://test-justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://test-justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://test-justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://test-justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E16T92AA3CQF3P --paths /index.html /.well-known/* --profile justnote",
     "deploy-prod": "aws s3 sync build/static s3://justnote-web/static --size-only --delete --acl public-read --cache-control max-age=31536000 --profile justnote && aws s3 sync build s3://justnote-web --exclude static/* --size-only --delete --acl public-read --profile justnote && aws s3 cp build/.well-known/apple-app-site-association s3://justnote-web/.well-known/apple-app-site-association --acl public-read --content-type application/json --profile justnote && aws s3 cp build/service-worker.js s3://justnote-web/service-worker.js --acl public-read --cache-control no-cache --profile justnote && aws s3 cp build/index.html s3://justnote-web/index.html --acl public-read --cache-control no-cache --profile justnote && aws cloudfront create-invalidation --distribution-id E1G6UHDXNDOUN --paths /index.html /.well-known/* --profile justnote",
     "eject": "react-scripts eject"
@@ -18,39 +16,45 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-decoupled-document": "file:../../../ckeditor5/packages/ckeditor5-build-decoupled-document",
     "@ckeditor/ckeditor5-react": "^3.0.3",
-    "@stacks/auth": "^2.0.1",
-    "@stacks/connect": "^6.2.0",
-    "@stacks/storage": "^2.0.1",
-    "@stacks/wallet-sdk": "^2.0.1",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/line-clamp": "^0.2.2",
-    "@tailwindcss/typography": "^0.4.1",
+    "@stacks/auth": "2.0.1",
+    "@stacks/connect": "6.2.0",
+    "@stacks/storage": "2.0.1",
+    "@stacks/wallet-sdk": "2.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/file-saver": "^2.0.3",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.34",
+    "@types/file-saver": "^2.0.4",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
-    "@types/url-parse": "^1.4.5",
-    "@welldone-software/why-did-you-render": "^6.2.1",
-    "autoprefixer": "^10.4.0",
+    "@types/react-redux": "^7.1.21",
+    "@types/url-parse": "^1.4.6",
+    "@welldone-software/why-did-you-render": "^6.2.3",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.2",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "file-saver": "^2.0.5",
     "framer-motion": "4.1.17",
-    "postcss": "^8.3.11",
-    "postcss-cli": "^9.0.1",
+    "postcss": "^8.4.5",
+    "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "redux-loop": "^6.1.0",
+    "redux-loop": "^6.2.0",
     "reselect": "^4.1.5",
-    "tailwindcss": "^2.2.19",
-    "url-parse": "^1.5.3",
+    "stream-browserify": "^3.0.0",
+    "tailwindcss": "^3.0.12",
+    "url-parse": "^1.5.4",
+    "util": "^0.12.4",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
