--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,6 +35,7 @@
     "@types/react-redux": "^7.1.21",
     "@types/url-parse": "^1.4.6",
     "@welldone-software/why-did-you-render": "^6.2.3",
+    "@zip.js/zip.js": "^2.3.23",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "buffer": "^6.0.3",
