--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@ckeditor/ckeditor5-react": "^5.0.2",
     "@stacks/auth": "2.0.1",
     "@stacks/connect": "6.2.0",
+    "@stacks/encryption": "2.0.1",
     "@stacks/storage": "2.0.1",
     "@stacks/wallet-sdk": "2.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
@@ -35,9 +36,11 @@
     "@types/react-redux": "^7.1.21",
     "@types/url-parse": "^1.4.6",
     "@welldone-software/why-did-you-render": "^6.2.3",
+    "@wewatch/lexorank": "^1.0.3",
     "@zip.js/zip.js": "^2.3.23",
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "file-saver": "^2.0.5",
