--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -57,6 +57,7 @@
     "reselect": "^4.1.5",
     "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.0.12",
+    "tailwindcss-labeled-groups": "^0.0.2",
     "url-parse": "^1.5.9",
     "util": "^0.12.4",
     "web-vitals": "^0.2.4",
