Export note as PDF in mobile

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -7,6 +7,7 @@
     "build-css": "create-tailwind-rn tailwind.css src/stylesheets/tailwind.json",
     "export-stacks-access-as-string": "node bin/export-stacks-access-as-string.js ../../../stacks-access-in-webview .",
     "export-ckeditor-as-string": "node bin/export-ckeditor-as-string.js ../../../justnote-editor-in-webview/core-js/minified.js ../../../justnote-editor-in-webview/js/ckeditor.js ../../../justnote-editor-in-webview/css/tailwind.css ../../../justnote-editor-in-webview/css/ckeditor.css ../../../justnote-editor-in-webview/index.html ./ckeditor.js",
+    "export-jhfp-as-string": "node bin/export-jhfp-as-string.js ../../../justnote-html-for-pdf/css/tailwind.css ../../../justnote-html-for-pdf/css/ckeditor.css ../../../justnote-html-for-pdf/index.html ./jhfp.js",
     "android": "react-native run-android",
     "android-release": "react-native run-android --variant=release",
     "ios-install": "npx pod-install",
@@ -26,6 +27,7 @@
     "react-native-device-time-format": "https://github.com/stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84",
     "react-native-fast-image": "^8.6.1",
     "react-native-file-access": "^2.5.0",
+    "react-native-html-to-pdf": "https://github.com/stxapps/react-native-html-to-pdf#f4be7cf4b657be6489dab261a70c95952b4037bb",
     "react-native-iap": "8.2.1",
     "react-native-keyboard-manager": "^6.5.4-4",
     "react-native-mmkv-storage": "0.4.4",
