--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -28,6 +28,8 @@ def __apply_xcode_15_patch(installer)
   end
 end
 
+$RNFANoPrivacyAPI = true
+
 target 'Justnotecc' do
 
   pod 'PromisesObjC', :modular_headers => true
