--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "assert": "^2.0.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.2",
+    "blueimp-load-image": "^5.16.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "file-saver": "^2.0.5",
