--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -38,10 +38,11 @@
     "react-native-iap": "^12.13.2",
     "react-native-keyboard-manager": "^6.5.11-2",
     "react-native-mmkv-storage": "0.4.4",
+    "react-native-receive-sharing-intent": "https://github.com/stxapps/react-native-receive-sharing-intent#c3acb5afdae0087aef58ad806e8208ef2f280f7e",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-share": "^9.1.0",
     "react-native-svg": "^13.9.0",
-    "react-native-webview": "^13.2.2",
+    "react-native-webview": "^13.10.5",
     "react-native-zip-archive": "^6.1.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
