--- a/packages/mobile/ios/Justnotecc.xcodeproj/xcshareddata/xcschemes/Save to Justnote.xcscheme
+++ b/packages/mobile/ios/Justnotecc.xcodeproj/xcshareddata/xcschemes/Save to Justnote.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1540"
+   LastUpgradeVersion = "1600"
    wasCreatedForAppExtension = "YES"
    version = "2.0">
    <BuildAction
@@ -16,7 +16,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "04CD6DD42C452A4B00715549"
+               BlueprintIdentifier = "0444F53D2CB00D590008A942"
                BuildableName = "Save to Justnote.appex"
                BlueprintName = "Save to Justnote"
                ReferencedContainer = "container:Justnotecc.xcodeproj">
@@ -59,8 +59,8 @@
       launchAutomaticallySubstyle = "2">
       <RemoteRunnable
          runnableDebuggingMode = "1"
-         BundleIdentifier = "com.google.chrome.ios"
-         RemotePath = "/var/containers/Bundle/Application/A51BCD85-2D4A-4370-AFAD-ACDF3A668DF6/stable.app">
+         BundleIdentifier = "com.apple.mobilenotes"
+         RemotePath = "/var/containers/Bundle/Application/4CEAE57E-4668-4156-B273-E23FFD631D11/MobileNotes.app">
       </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
