--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -18,59 +18,61 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@bam.tech/react-native-image-resizer": "^3.0.7",
-    "@vonovak/react-native-theme-control": "^6.0.1",
+    "@bam.tech/react-native-image-resizer": "^3.0.10",
+    "@vonovak/react-native-theme-control": "^6.0.2",
     "@wewatch/lexorank": "^1.0.3",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "event-target-fallback": "^1.0.0",
-    "htmlparser2": "^9.0.0",
+    "htmlparser2": "^9.1.0",
     "jest-diff": "^29.7.0",
     "queue": "^7.0.0",
-    "react": "18.1.0",
-    "react-native": "0.70.3",
+    "react": "18.3.1",
+    "react-native": "0.75.4",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?51209bd3b6201bb56dfb5b652a7faedd555f7648",
+    "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?3d5bcd6ea9a17f00c76be5913009f2c02f13b95f",
     "react-native-default-preference": "^1.4.4",
-    "react-native-device-time-format": "https://github.com/stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84",
-    "react-native-document-picker": "^9.1.1",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-file-access": "^3.1.0",
+    "react-native-device-time-format": "github:stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-file-access": "^3.1.1",
     "react-native-flag-secure": "^1.0.4",
-    "react-native-html-to-pdf": "https://github.com/stxapps/react-native-html-to-pdf#77aed8df9caa3b48f7cf19933bc6d6576fe817ce",
-    "react-native-iap": "^12.13.2",
-    "react-native-keyboard-manager": "^6.5.11-2",
-    "react-native-mmkv-storage": "0.4.4",
-    "react-native-receive-sharing-intent": "https://github.com/stxapps/react-native-receive-sharing-intent#c3acb5afdae0087aef58ad806e8208ef2f280f7e",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-share": "^9.1.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-html-to-pdf": "github:stxapps/react-native-html-to-pdf#77aed8df9caa3b48f7cf19933bc6d6576fe817ce",
+    "react-native-iap": "^12.15.4",
+    "react-native-keyboard-manager": "^6.5.16-0",
+    "react-native-mmkv-storage": "^0.4.4",
+    "react-native-receive-sharing-intent": "github:stxapps/react-native-receive-sharing-intent#d1b4aa9140e0ad28e1a8403814125a733c92172c",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-share": "^11.0.3",
+    "react-native-svg": "^15.7.1",
     "react-native-system-navigation-bar": "^2.6.4",
-    "react-native-webview": "^13.10.5",
-    "react-native-zip-archive": "^6.1.0",
-    "react-redux": "^8.1.1",
+    "react-native-webview": "^13.12.3",
+    "react-native-zip-archive": "^7.0.1",
+    "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-loop": "^6.2.0",
     "reselect": "^4.1.8",
-    "tailwind-rn": "https://github.com/stxapps/tailwind-rn#96848a8d2c2370e4f5e57a773ace172c4073157d",
+    "tailwind-rn": "github:stxapps/tailwind-rn#96848a8d2c2370e4f5e57a773ace172c4073157d",
     "url-parse": "^1.5.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react-native": "0.70.3",
-    "@welldone-software/why-did-you-render": "^7.0.1",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-inline-import": "^3.0.0",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-native-flipper": "0.164.0",
-    "react-test-renderer": "18.1.0",
-    "redux-flipper": "^2.0.2",
-    "typescript": "^5.1.6"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@welldone-software/why-did-you-render": "^8.0.3",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=18"
   }
 }
