--- a/packages/expo/tsconfig.json
+++ b/packages/expo/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": false,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     }
