--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -15,54 +15,53 @@
     "ios-release": "npx expo run:ios --configuration Release",
     "start": "npx expo start",
     "web": "expo start --web",
-    "test": "jest --watchAll",
     "lint": "npx expo lint --no-cache"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/native": "^7.1.6",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/native": "^7.1.8",
     "@wewatch/lexorank": "^1.0.3",
     "event-target-fallback": "^1.0.0",
-    "expo": "~53.0.23",
-    "expo-build-properties": "~0.14.8",
-    "expo-dev-client": "~5.2.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-font": "~13.3.1",
-    "expo-iap": "^2.4.4",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-linking": "~7.1.7",
-    "expo-localization": "~16.1.6",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-print": "~14.1.4",
-    "expo-router": "~5.1.7",
-    "expo-share-intent": "^4.1.1",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "~14.2.0",
+    "expo": "~54.0.29",
+    "expo-build-properties": "~1.0.10",
+    "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
+    "expo-font": "~14.0.10",
+    "expo-iap": "^3.2.0",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-localization": "~17.0.8",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-print": "~15.0.8",
+    "expo-router": "~6.0.19",
+    "expo-share-intent": "^5.1.1",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "htmlparser2": "^9.1.0",
     "jest-diff": "^29.7.0",
     "queue": "^7.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-blockstack": "https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?3d5bcd6ea9a17f00c76be5913009f2c02f13b95f",
-    "react-native-file-access": "^3.1.1",
+    "react-native-blockstack": "file:../../../blockstack-react-native/BlockstackSDK",
+    "react-native-edge-to-edge": "^1.7.0",
+    "react-native-file-access": "^3.2.0",
     "react-native-flag-secure": "^1.0.4",
-    "react-native-keyboard-controller": "^1.17.5",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv-storage": "0.4.4",
-    "react-native-navigation-mode": "^1.1.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-share": "^12.1.0",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-navigation-mode": "^1.2.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-share": "^12.2.1",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-native-zip-archive": "^7.0.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
@@ -72,15 +71,11 @@
     "url-parse": "^1.5.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@stylistic/eslint-plugin": "^5.2.2",
-    "@types/react": "~19.0.10",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.10",
-    "react-native-svg-transformer": "^1.5.1",
-    "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3"
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "@types/react": "~19.1.0",
+    "eslint-config-expo": "~10.0.0",
+    "react-native-svg-transformer": "^1.5.2",
+    "react-test-renderer": "19.1.0",
+    "typescript": "~5.9.2"
   }
 }
