Upgrade react-native-blockstack

--- a/packages/expo/android/gradle.properties
+++ b/packages/expo/android/gradle.properties
@@ -65,6 +65,7 @@ expo.useLegacyPackaging=false
 expo.edgeToEdgeEnabled=true
 
 android.minSdkVersion=30
+android.packagingOptions.pickFirsts=META-INF/versions/9/OSGI-INF/MANIFEST.MF
 android.enableMinifyInReleaseBuilds=true
 horizonEnabled=false
 
