--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -47,7 +47,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-animated-spinkit": "^1.5.2",
-    "react-native-blockstack": "file:../../../blockstack-react-native/BlockstackSDK",
+    "react-native-blockstack": "file:../../../sdrive-hub-sdk/blockstack-react-native/react-native-blockstack-0.1.1.tgz",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-file-access": "^3.2.0",
     "react-native-flag-secure": "^1.0.4",
