Enable shrink resources in release builds on Android

--- a/packages/expo/android/gradle.properties
+++ b/packages/expo/android/gradle.properties
@@ -67,6 +67,7 @@ expo.edgeToEdgeEnabled=true
 android.minSdkVersion=30
 android.packagingOptions.pickFirsts=META-INF/versions/9/OSGI-INF/MANIFEST.MF
 android.enableMinifyInReleaseBuilds=true
+android.enableShrinkResourcesInReleaseBuilds=true
 horizonEnabled=false
 
 JUSTNOTE_UPLOAD_STORE_FILE=justnote-android-upload-key.keystore
